little changes al markdown. Se especificaron los nombres de las TABS

--- a/DataCleanup/ine_accidentes.html
+++ b/DataCleanup/ine_accidentes.html
@@ -2969,6 +2969,18 @@ Para concluir la unificación de la base de datos de hechos de tránsito se guar
 5   Empotro       NA       NA        NA      &lt;NA&gt;
 6     Caída       NA       NA        NA      &lt;NA&gt;</code></pre>
 </div>
+<div id="fallecidos-y-lesionados" class="section level1">
+<h1>Fallecidos y Lesionados</h1>
+<p>FOO</p>
+</div>
+<div id="vehiculos-involucrados" class="section level1">
+<h1>Vehiculos Involucrados</h1>
+<p>FOO</p>
+</div>
+<div id="base-unificada-ine-2009-2017" class="section level1">
+<h1>Base Unificada INE 2009-2017</h1>
+<p>FOO</p>
+</div>
 
 </div>
 
