se agregó enlace al codebook en markdown

--- a/DataCleanup/ine_accidentes.html
+++ b/DataCleanup/ine_accidentes.html
@@ -2631,6 +2631,11 @@ window.FlexDashboardComponents.push({
 <div id="descripcion" class="section level3">
 <h3>Descripción</h3>
 <p>El <a href="https://www.ine.gob.gt/">instituto nacional de estadística de Guatemala</a>, provee una base de datos de Accidentes de tránsito desde el año 2009 al año 2017 (<a href="https://www.ine.gob.gt/index.php/estadisticas-continuas/accidentes-de-transito">consultado: Julio, 2018)</a>). Como parte de su módulo de estadísticas continuas. Esta base de datos presenta información de Hechos de Tránsito (<strong>HT</strong>), Vehiculos involucrados (<strong>VI</strong>) y lesionados y fallecidos (<strong>FL</strong>). Sin embargo esta información se encuentra fragmentada en distintos documentos que han sido agregados anualmente. Estos documentos se encuentran en distintos formatos y contienen variables diferentes. El objetivo primario de este acercamiento de limpieza de bases de datos es la unificación de los tres tipos de bases de datos para obtener una base centralizada facil de acceder para utilizar en futuros análisis. A continuación se desglosa el procedimiento que se siguió para realizar esta unificación, con justificaciones para las variables descartadas y las codificaciones realizadas.</p>
+<div id="libro-de-codigos" class="section level4">
+<h4>Libro de Codigos</h4>
+<p>El libro de códigos se encuentra en el siguiente enlace: (<a href="https://github.com/Rafalp190/DSP1-UVG/blob/master/DataCleanup/Results/Codebook.pdf" class="uri">https://github.com/Rafalp190/DSP1-UVG/blob/master/DataCleanup/Results/Codebook.pdf</a>)</p>
+<p>O en un ambiente local (clonado de github), se encuentra en la carpeta <strong>Results</strong> bajo el nombre <em>Codebook</em></p>
+</div>
 </div>
 <div id="observacion-inicial" class="section level3">
 <h3>Observación Inicial</h3>
